# Surveyer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: survey.toml
src/surveyer/: bibtex.py  cancel.py  cli.py  config.py  dedup.py  export.py  extend.py  ledger.py  models.py  pipeline.py  prisma.py  seeds.py  snowball.py
src/surveyer/filtering/: __init__.py  keyword.py  llm.py
src/surveyer/prisma/: __init__.py  graphviz_render.py  mermaid_render.py  model.py
src/surveyer/sources/: __init__.py  agent.py  base.py  dblp.py  google_scholar.py  openalex.py  pubmed.py  semantic_scholar.py
src/surveyer/tui/: __init__.py  app.py  concepts.py  config_io.py  dashboard.py  home.py  logo.py  picker.py  progress.py
tests/: conftest.py  test_bibtex.py  test_cancel.py  test_cli.py  test_config.py  test_dedup.py  test_export.py  test_extend.py  test_ledger.py  test_models.py  test_pipeline.py  test_prisma.py  test_seeds.py  test_snowball.py
tests/examples/fixtures/: openalex_refs_page.json
tests/filtering/: test_keyword.py  test_llm.py
tests/fixtures/: dblp_sample.json  openalex_sample.json  pubmed_sample.xml  s2_sample.json
tests/prisma/: test_graphviz.py  test_mermaid.py  test_model.py
tests/sources/: test_agent.py  test_base.py  test_dblp.py  test_google_scholar.py  test_openalex.py  test_pubmed.py  test_registry.py  test_semantic_scholar.py
tests/tui/: test_app.py  test_cli.py  test_config_io.py  test_dashboard.py  test_prisma_text.py  test_progress.py
