[project]
name = "surveyer"
version = "0.1.0"
description = "Standard tool for survey research."
requires-python = ">= 3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ismail Hatim", email = "ismail.hatim@polytechnique.edu" }]
dependencies = [
    "polars>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "typer>=0.12",
    "marimo>=0.13",
    "structlog>=24.1",
    "msgspec>=0.18",
    "numpy>=1.26",
    "pandas>=2.2",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "openai>=1.40",
    "xlsxwriter>=3.2",
    "openpyxl>=3.1",
    "graphviz>=0.20",
]

[project.optional-dependencies]
scholar = ["scholarly>=1.7"]
ollama = ["ollama>=0.3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.16",
]

[project.scripts]
surveyer = "surveyer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surveyer"]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["surveyer"]

[tool.ty.rules]
