[project]
name = "surveyer"
version = "1.0.0"
description = "Standard tool for survey research."
requires-python = ">= 3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ismail Hatim", email = "ismail.hatim@polytechnique.edu" }]
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "structlog>=24.1",
    "msgspec>=0.18",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "openai>=1.40",
    "xlsxwriter>=3.2",
    "openpyxl>=3.1",
    "graphviz>=0.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
scholar = ["scholarly>=1.7"]
ollama = ["ollama>=0.3"]
tui = ["textual>=1.0", "tomlkit>=0.13"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.16",
]

[project.scripts]
surveyer = "surveyer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surveyer"]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["surveyer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.rules]
